<resources>
    <string name="welcome">21 Steps - это увлекательное приложение, которое проведёт тебя сквозь 21 шаг, и ты познаешь, что значит быть успешным в 21 веке! Двигайся по карте, решай задания, и ты познаешь что значит быть человеком 21 века!</string>
    <string name="app_name">21steps</string>
    <string name="password">Придумай пароль</string>
    <string name="age">Твой возраст</string>
    <string name="name">Твоё имя</string>
    <string name="nickname">Придумай себе никнэйм</string>
    <string name="register">Зарегистрироваться!</string>
    <string name="alreadyRegistered">Уже есть аккаунт? Войди в него здесь</string>
    <string name="situation_image">Иконка ситуации</string>
    <string name="rectangle_image">Фоновое изображение</string>
    <string name="step1_info">Пароль - секретное условное слово для опознания своих на службе, но в современном мире это еще и секретное слово, которое защищает твои данные от посторонних.
Пароли бывают разные: от социальных сетей, от банковских карточек, от личных профилей.
Самое главное, что ты должен усвоить, - нужно придумывать сложные пароли, которые никто не сможет взломать, а еще никогда их никому не раскрывать (включая друзей).</string>
    <string name="step1_situation">Допустим, что ты пошел в магазин и решил расплатиться за свои покупки при помощи
        банковской карты. Однако, продавец говорит, что ему сложно протянуть тебе карточный терминал, чтобы ты сам ввел
        свой PIN-код.
Что ты ответишь на его просьбу? Чтобы увидеть варианты ответов, нажми дальше.</string>
    <string name="step1_rightAnswer">Ты выбрал второй вариант, говорящий о том, что ты не будешь называть PIN-код.
        Ты действительно понял(-а)
важность паролей,
и заслужил(-а) +2 балла
к твоему текущему счёту!
Помни, что никому нельзя говорить паролей, а особенно незнакомым людям. Продавцы всегда обязаны давать
        тебе возможность самому ввести PIN-код, отвернувшись при этом,
        а потом выдавать тебе чек для подписи.</string>
    <string name="step1_wrongAnswer">Ты выбрал первый вариант, говорящий о том, что ты согласишься продавцом и доверишь ему свои конфиденциальные данные. К сожалению, ты не прошёл
задание.
Ты должен помнить при любой ситуации о важности неразглашения паролей, несмотря на то, что тебе говорят.
Продавцы всегда обязаны давать тебе возможность самому ввести PIN-код, отвернувшись при этом, а потом выдавать тебе чек для подписи. </string>
    <string name="step2_situation">Ты стоишь на перекрестке и ждешь, пока загорится зеленый цвет, чтобы перейти дорогу. Дождавшись, ты ступаешь на пешеходный переход, но тут ты видишь, что подъехала машина, которая не является ни одной из тех, которые ты обязан пропускать, и из окна выглядывает мужчина, который кричит тебе о том, что ты должен идти быстрее, что ты не уважаешь взрослых, раз заставляешь их ждать, и оказывает на тебя давление.
Что ты сделаешь в этой ситуации?</string>
    <string name="step2_description_part1">Для того, чтобы пройти второй шаг, тебе нужно перейти дорогу. А для этого нужно знать правила дорожного движения.
</string>
    <string name="step2_description_part2">Кроме этого, важно знать, как защищать свои права, когда ты перемещаешься по правилам, а другие - нет, поэтому обязательно выполни задание после прочтения материала!
    </string>
    <string name="step2_info_part1">Каждый раз при переходе дороги необходимо придерживаться следующих правил:</string>
    <string name="step2_info_part2">
        Красный свет: нужно остановиться, желтый: приготовиться идти, зеленый: идти.
        </string>
    <string name="step2_info_part3">
        Всегда ищи пешеходный переход. Если нет светофора, то проверь наличие машин. Смело переходи, только если их нет, или они достаточно далеко.
    </string>
    <string name="step2_info_part4">
        ВСЕГДА ПРОПУСКАЙ МАШИНЫ СКОРОЙ ПОМОЩИ, ПОЛИЦИИ И ПОЖАРНЫЕ МАШИНЫ.
        </string>
    <string name="step2_info_part5">
        Ездить на велосипеде по проезжей части можно только с 14 лет и только по крайней правой полосе или обочине, если это не мешает другим пешеходам.
    </string>
    <string name="step2_answer1">Ты знаешь, что ты прав, поэтому не обращая внимания, продолжишь путь, чтобы не подвергать себя опасности и успеть пройти дорогу на зеленый цвет</string>
    <string name="step2_answer2">Ты знаешь, что ты прав, поэтому, остановившись на середине дороги, попытаешься объяснить мужчине его ошибку.</string>
    <string name="step2_answer3">Подумав, что мужчина взрослый, и поэтому он знает лучше тебя, ты испугаешься и начнешь извиняться, чтобы не показаться грубым.</string>
    <string name="step2_right_feedback">Конечно, знать, как отстаивать свою правоты очень важно, но твоя жизнь важнее, поэтому тебе лучше постараться успеть перейти дорогу до того, пока не загорелся красный цвет, и не подвергать себя опасности.
Также очень важно уметь быть увереным в своих знаниях, поэтому не стоить бояться взрослых, которые оказывают на тебя давление тем, что старше тебя. Возраст - важно, но знания важнее!</string>
    <string name="step2_medium_feedback">Конечно, знать, как отстаивать свою правоту очень важно, но твоя жизнь важнее, поэтому тебе лучше постараться успеть перейти дорогу до того, пока не загорелся красный цвет и не подвергать себя опасности.
Также очень важно уметь быть увереным в своих знаниях, поэтому не стоить бояться взрослых, которые оказывают на тебя давление тем, что старше тебя. Возраст - важно, но знания важнее!</string>
    <string name="step2_wrong_feedback">Конечно, знать, как отстаивать свою правоту очень важно, но твоя жизнь важнее, поэтому тебе лучше постараться успеть перейти дорогу до того, пока не загорелся красный цвет и не подвергать себя опасности того.
Также очень важно уметь быть увереным в своих знаниях, поэтому не стоит бояться взрослых, которые оказывают на тебя давление тем, что старше тебя. Возраст - важно, но знания важнее!</string>
    <string name="step3_description_part1">Пришло время
испытаний посложнее!</string>
    <string name="step3_description_part2">Что такое лидерство? Кто такой настоящий лидер? Почему сегодня быть лидером так важно? </string>
    <string name="step3_info">Лидер - это человек, который может брать на себя ответственность, достигать целей и вести за собой команду.
Способность уверенно и рационально принимать решения,
доказывать свою точку зрения, работать с людьми, идти на компромиссы и строить плодотворный диалог сделают тебя лидером! Если даже ты не хочешь занимать руководящие должности, лидерские качества необходимы тебе для развития аналитического мышления, уверенности и силы духа!
Настоящие лидеры славятся своими способностями выдерживать давление, критику и преуспевать!
</string>
    <string name="step3_activity">Представь, что ты находишься
на  важном собрании. На собрании также находятся очень уважаемые, признанные другими профессионалами, авторитетные люди. Один из них высказывает свою точку зрения  касательно какого-то вопроса. Однако, ты не согласаешься с этим мнением. Постараешься
ли ты публично высказать свою точку зрения или доверишься авторитету?</string>
    <string name="step3_answer1">Я публично выскажу
своё мнение и постараюсь
его обосновать</string>
    <string name="step3_answer2">
Я выскажу своё мнение
этому авторитетному лицу
лично
</string>
    <string name="step3_answer3">
Я предпочту промолчать,
ведь возможно моего опыта
и знаний недостаточно,
чтобы оспаривать мнение
авторитетов</string>
    <string name="step3_right_feedback">Ты понимаешь, кто такой лидер, и зарабатываешь +2 балла!
Помни, что никакой авторитет
не должен тебе мешать
высказывать своё мнение
и брать ситуацию в свои руки,
показывая себя как настоящего
лидера! Лидеры не боятся
публики, не боятся осуждения
 и всегда готовы аргументированно спорить!</string>
    <string name="step3_medium_feedback">Мы хвалим тебе за умение и
желание высказывать своё
мнение вне зависимости
от того, кому ты его высказываешь и дарим тебе +1 балл! Однако, помни, что
истинные лидеры убеждают не одного, а десятки, сотни или даже тысячи людей! Не бойся публики или её осуждения, и тогда ты сможешь стать настоящим лидером!
</string>
    <string name="step3_wrong_feedback">К сожалению, ты не проходишь
задание на настоящего лидера. Помни, что твои сомнения насчёт твоей подготовленности не должны мешать тебе высказывать свою точку зрения, ведь
авторитет других людей или лидеров не доказывает их
правоту во всех случаях. Не бойся говорить публично, если можешь обосновать свою точку зрения! </string>
    <string name="step4_info_part1">
        Управление временем, организация времени, тайм-менеджмент (англ. time management) — технология организации времени и повышения эффективности его использования. Здесь ты можешь увидеть советы по тому, как сделать свой тайм-менеджмент хорошим.
    </string>
    <string name="step4_info_part2"> 1. Научись составлять план на неделю и день. Не только продумывай его, но и записывай. </string>
    <string name="step4_info_part3"> 2. Ставь приоритеты. Определи, какие задачи более важны и займут больше времени.</string>
    <string name="step4_info_part4"> 3. Разбивай сложные задачи на более мелкие составляющие. </string>
    <string name="step4_info_part5"> 4. Устрой свой план так, чтобы разные виды деятельности сменяли друг друга. Нужно устраивать перерывы на отдых хотя бы раз в час. </string>
    <string name="step4_activity">Предположим, тебе предстоит выступить с рефератом. Будешь ли ты уделять внимание не только содержанию доклада, но и его продолжительности?</string>
    <string name="step4_answer1">Буду уделять самое серьезное внимание содержанию доклада. Думаю, что продолжительность нужно определять лишь приблизительно.</string>
    <string name="step4_answer2">Уделяю время в равной степени внимание содержанию и продолжительности доклада.</string>
    <string name="step4_right_feedback">Совершенно верно! Ты должен уважать не только свое вемя, но и время людей, которые слушают твой реферат. </string>
    <string name="step4_wrong_feedback">Конечно, содержание докладо очень важно, но ты должен помнить, что даже самые великие идеи можно описать в течение ограниченного промежутка времени. </string>
    <string name="step5_info_part1">Достоверность информации– показатель качества информации, означающий её полноту и общую точность; ее неискаженность. Как понять, что информация достоверна?</string>
    <string name="step5_info_part2">1. Прими во внимание репутацию автора. Ссылайся на слова авторов, репутация которых в данной сфере достаточно высока.
    </string>
    <string name="step5_info_part3">2. Узнай, когда было опубликовано издание или статья. Возможно, у нее есть улучшенная или обновленная версия.
    </string>
    <string name="step5_info_part4">3. Посмотри на источники вашего источника информации, чтобы знать, не предвзятое ли у него отношение к теме.
    </string>
    <string name="step6_info_part1">Финансовая грамотность - очень сложный концепт, однако, мы постараемся объяснить тебе несколько правил, полезных на твоем пути взросления.</string>
    <string name="step6_info_part2">1. Различай желание и необходимость при расстановке приоритетов. К примеру, еда является необходимостью, а какая-нибудь игрушка - желанием.</string>
    <string name="step6_info_part3">2. Популярные бренды не всегда лучшие. Продукты обычных фирм чаще всего практически не отстают от брендовых, поэтому необходимо оценивать сам продукт, а не бренд.    </string>
    <string name="step6_info_part4">3. Составляй список желаний, чтобы копить на них денежные средства. </string>
    <string name="step6_info_part5">4. Чтобы понять ценность денег, попробуй найти себе подработку на лето, когда ты свободен от учебы. Попроси родителей помочь с этим.  </string>
    <string name="clear">Всё понятно!</string>
</resources>