<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a21steps.RegisterActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="284dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="284dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="50dp"

        android:layout_marginRight="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"

        android:ems="10"

        android:hint="@string/age"

        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextNick"
        android:layout_width="284dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"

        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textEmailAddress"


        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="284dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginRight="8dp"

        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/textColor"
        android:layout_marginStart="100dp"
        android:background="@drawable/shape"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/textViewAlreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginLeft="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/alreadyRegistered" />
</LinearLayout>
