<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/map"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="26sp"
            />
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="279dp"
        android:layout_height="445dp"
        app:srcCompat="@drawable/shape"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.924"
        app:layout_constraintHorizontal_bias="0.505" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="91dp"
        android:layout_height="78dp"
        app:srcCompat="@drawable/info"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="@+id/buttonClear"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.017"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="51dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/titleColor"
        android:textStyle="bold"
        android:text="Шаг 6"
        android:textSize="13sp"
        app:layout_constraintRight_toLeftOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/titleColor"
        android:textStyle="bold"
        android:text="Информация"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/circled_corner_button"
        android:text="@string/clear"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/step6_info_part1"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintVertical_bias="0.154"
        app:layout_constraintHorizontal_bias="0.504" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:text="@string/step6_info_part2"

        android:textColor="@color/textColor"
        app:layout_constraintTop_toTopOf="@+id/my_toolbar"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.519" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/step6_info_part3"

        android:textColor="@color/textColor"
        app:layout_constraintTop_toTopOf="@+id/my_toolbar"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.696" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/step6_info_part4"

        android:textColor="@color/textColor"
        app:layout_constraintTop_toTopOf="@+id/my_toolbar"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.789" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:text="@string/step6_info_part5"

        android:textColor="@color/textColor"
        app:layout_constraintTop_toTopOf="@+id/my_toolbar"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.911"
        app:layout_constraintHorizontal_bias="0.505" />
</android.support.constraint.ConstraintLayout>